--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,1 +1,25 @@
-//
+@media (max-width: 1200px)
+    .header
+        &_title
+            font-size: 36px
+        &_text
+            font-size: 14px
+
+@media (max-width: 992px)
+    //
+
+@media (max-width: 768px)
+    .header
+        padding-top: 35%
+        background-size: 140%
+
+@media (max-width: 576px)
+    .header
+        background-size: 160%
+        &_title
+            font-size: 24px
+        &_subtitle
+            margin-bottom: 40px
+        &_button
+            font-size: 17px
+            padding: 10px 20px
