--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,8 +9,74 @@ body
     font-size: 15px
 
 .container
-    width: 100%
-    max-width: 1100px
-    margin: 0 auto
+    padding-right: 15px
+    padding-left: 15px
+    margin-right: auto
+    margin-left: auto
 
+@media (min-width: 576px)
+    .container
+        max-width: 540px
+
+@media (min-width: 768px)
+    .container
+        max-width: 720px
+
+@media (min-width: 992px)
+    .container
+        max-width: 960px
+
+@media (min-width: 1200px)
+    .container
+        max-width: 1140px
+
+
+.tac
+    text-align: center
+
+.header
+    background-image: url(../img/header-bg.png)
+    background-color: #000
+    background-size: 100%
+    background-repeat: no-repeat
+    background-position: center 0
+    padding-top: 25%
+    padding-bottom: 10px
+    color: #fff
+    &_title
+        font-weight: 100
+        font-size: 48px
+        margin-bottom: 10px
+    &_subtitle
+        font-weight: 100
+        font-size: 16px
+        color: #ccc
+        position: relative
+        margin-bottom: 60px
+        &::after
+            content: ''
+            width: 300px
+            height: 1px
+            background-color: #333
+            position: absolute
+            z-index: 10
+            bottom: -20px
+            left: calc(50% - 150px)
+    &_text
+        font-size: 16px
+        line-height: 1.5
+        max-width: 800px
+        width: 100%
+        margin: 0 auto
+        margin-bottom: 50px
+    &_button
+        display: inline-block
+        background-color: #000
+        border-radius: 5px
+        border: 1px solid #fff
+        padding: 10px 30px
+        font-size: 20px
+        color: #fff
+        text-decoration: none
+    
 @import _media.sass
