--- a/sass/main.sass
+++ b/sass/main.sass
@@ -7,29 +7,7 @@ body
     font-weight: normal
     font-family: 'Montserrat'
     font-size: 15px
-
-.container
-    padding-right: 15px
-    padding-left: 15px
-    margin-right: auto
-    margin-left: auto
-
-@media (min-width: 576px)
-    .container
-        max-width: 540px
-
-@media (min-width: 768px)
-    .container
-        max-width: 720px
-
-@media (min-width: 992px)
-    .container
-        max-width: 960px
-
-@media (min-width: 1200px)
-    .container
-        max-width: 1140px
-
+    line-height: 1.5
 
 .tac
     text-align: center
@@ -64,7 +42,6 @@ body
             left: calc(50% - 150px)
     &_text
         font-size: 16px
-        line-height: 1.5
         max-width: 800px
         width: 100%
         margin: 0 auto
@@ -78,5 +55,46 @@ body
         font-size: 20px
         color: #fff
         text-decoration: none
+
+.about-btc
+    background-image: url(../img/about-bg.png)
+    background-position: center -70px
+    background-repeat: no-repeat
+    background-size: cover
+    position: relative
+    padding-top: 150px
+    padding-bottom: 80px
+    color: #fff
+    & > *
+        position: relative
+        z-index: 1
+    p
+        font-size: 16px
+        text-indent: 40px
+    &::before
+        content: ''
+        position: absolute
+        width: 100%
+        height: 200px
+        left: 0
+        top: 0
+        background: linear-gradient(to top, rgba(0,0,0,0), rgba(0,0,0,1))
+    &_text
+        position: relative
+        min-height: 300px
+        &::after
+            content: ''
+            position: absolute
+            width: 750px
+            height: 330px
+            top: -80px
+            left: -450px
+            background-image: url(../img/about-section-arrow.png)
+            background-repeat: no-repeat
+            background-size: cover
+    &_title
+        font-family: 'Oswald'
+        font-weight: normal
+        font-size: 55px
     
 @import _media.sass
