--- a/sass/main.sass
+++ b/sass/main.sass
@@ -13,6 +13,8 @@ body
     text-align: center
 
 .header
+    position: relative
+    z-index: 2
     background-image: url(../img/header-bg.png)
     background-color: #000
     background-size: 100%
@@ -57,14 +59,17 @@ body
         text-decoration: none
 
 .about-btc
+    top: -80px
+    z-index: 1
     background-image: url(../img/about-bg.png)
-    background-position: center -70px
+    background-position: center 0
     background-repeat: no-repeat
     background-size: cover
     position: relative
     padding-top: 150px
-    padding-bottom: 80px
+    padding-bottom: 120px
     color: #fff
+    box-shadow: 3px 50px 60px rgba(0, 0, 0, 0.5)
     & > *
         position: relative
         z-index: 1
@@ -96,5 +101,11 @@ body
         font-family: 'Oswald'
         font-weight: normal
         font-size: 55px
+
+.feedback
+    position: relative
+    top: -80px
+    background-color: #2b2b2b
+    padding: 50px 0
     
 @import _media.sass
