--- a/sass/main.sass
+++ b/sass/main.sass
@@ -175,6 +175,7 @@ body
         padding: 20px 0
         display: flex
         justify-content: space-between
+        align-items: center
     &_logo
         font-weight: bold
         font-size: 16px
