--- a/sass/main.sass
+++ b/sass/main.sass
@@ -32,7 +32,7 @@ body
         margin-bottom: 10px
     &_subtitle
         font-weight: 100
-        font-size: 16px
+        font-size: 18px
         color: #ccc
         position: relative
         margin-bottom: 60px
@@ -46,7 +46,7 @@ body
             bottom: -20px
             left: calc(50% - 150px)
     &_text
-        font-size: 16px
+        font-size: 17px
         max-width: 800px
         width: 100%
         margin: 0 auto
@@ -79,8 +79,9 @@ body
         position: relative
         z-index: 1
     p
-        font-size: 16px
+        font-size: 17px
         text-indent: 40px
+        text-align: justify
     &::before
         content: ''
         position: absolute
@@ -89,6 +90,14 @@ body
         left: 0
         top: 0
         background: linear-gradient(to top, rgba(0,0,0,0), rgba(0,0,0,1))
+    &::after
+        content: ''
+        position: absolute
+        width: 100%
+        height: 100%
+        left: 0
+        top: 0
+        background: rgba(0, 0, 0, 0.25)
     &_text
         position: relative
         min-height: 300px
@@ -118,8 +127,16 @@ body
     background-size: 90px
     padding: 50px 0
     &_text
-        text-align: center
         color: #fff
+        ul
+            li
+                list-style-type: none
+                line-height: 1.8
+                &::before
+                    position: relative
+                    left: -20px
+                    content: "\f00c"
+                    font-family: FontAwesome
     &_form
         background-color: #000
         padding: 10px 20px
