--- a/sass/main.sass
+++ b/sass/main.sass
@@ -126,8 +126,11 @@ body
     background-position-y: calc(100% + 30px)
     background-size: 90px
     padding: 50px 0
+    .row
+        align-items: center
     &_text
         color: #fff
+        font-size: 17px
         ul
             li
                 list-style-type: none
@@ -137,6 +140,7 @@ body
                     left: -20px
                     content: "\f00c"
                     font-family: FontAwesome
+                    color: #49FF00
     &_form
         background-color: #000
         padding: 10px 20px
